# config

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.cmake/: taocpp-config-config.cmake.in
.code-intelligence/: project.yaml
.code-intelligence/fuzz_targets/: config_validation.cpp  config_validation.cpp.yaml
.github/workflows/: clang-format.yml  clang-tidy.yml  fuzzing.yaml  fuzzing.yml  linux.yml  macos.yml  sanitizer.yml
doc/: All-Config-Functions.md  Changelog.md  Member-Extensions.md  Parsing-Config-Files.md  README.md  Two-Phase-Evaluation.md  Value-Extensions.md  Writing-Config-Files.md  Writing-Schema-Files.md
include/tao/: config.hpp
include/tao/config/: access.hpp  annotation.hpp  assign.hpp  check_file.hpp  from_file.hpp  from_files.hpp  from_input.hpp  from_string.hpp  key.hpp  key_kind.hpp  key_part.hpp  parse_file.hpp  parse_files.hpp  parse_input.hpp  parser.hpp  part.hpp  schema.hpp  schema_validator.hpp  to_stream.hpp  traits.hpp  value.hpp
include/tao/config/contrib/: rot13.hpp
include/tao/config/internal/: #phase2_repackage.hpp#  .#phase2_repackage.hpp  access.hpp  action.hpp  addition.hpp  annotation.hpp  argument_traits.hpp  array.hpp  assign.hpp  atom.hpp  binary_state.hpp  change_action_and_states.hpp  changes.hpp  concat.hpp  config_action.hpp  config_grammar.hpp  config_parser.hpp  config_rules.hpp  configurator.hpp  constants.hpp  control.hpp  debug_traits.hpp  entry.hpp  entry_array.hpp  entry_kind.hpp  entry_object.hpp  erase.hpp  events.hpp  events_from_value.hpp  extension_action.hpp  extension_grammar.hpp  extension_maps.hpp  extension_obtain.hpp  extension_rules.hpp  extension_t.hpp  extension_types.hpp  extension_utility.hpp  extension_wrapper.hpp  extensions.hpp  format.hpp  (+111 more)
include/tao/config/schema/: builtin.hpp  from_file.hpp  from_input.hpp  parse_file.hpp  parse_input.hpp  validator.hpp
include/tao/config/schema/internal/: all_of.hpp  any_of.hpp  array.hpp  binary.hpp  boolean.hpp  compare.hpp  constant.hpp  container.hpp  forward.hpp  grammar.hpp  has_property.hpp  if_then_else.hpp  iless.hpp  is_integer.hpp  is_regex.hpp  is_unsigned.hpp  istring.hpp  items.hpp  list.hpp  multiple_of.hpp  node.hpp  node_utility.hpp  not_ref.hpp  null.hpp  number.hpp  object.hpp  one_of.hpp  pattern.hpp  properties.hpp  property.hpp  property_names.hpp  ref.hpp  ref_impl.hpp  schema.hpp  size.hpp  string.hpp  switch.hpp  switch_case.hpp  trivial.hpp  unique_items.hpp  (+1 more)
src/example/config/: CMakeLists.txt  dump_all_phases.cpp  dump_only_data.cpp  dump_only_json.cpp  dump_phase_four.cpp  dump_phase_one.cpp  dump_phase_three.cpp  dump_phase_two.cpp  dump_with_meta.cpp  parse.cpp  try_catch.hpp
src/test/config/: CMakeLists.txt  access.cpp  assign.cpp  custom.cpp  debug_traits.cpp  enumerations.cpp  errors.cpp  failure.cpp  independence.cpp  internal_grammar.cpp  internal_key1.cpp  internal_parse.cpp  internal_ref2.cpp  internal_state.cpp  internal_temporary.cpp  key.cpp  key_part.cpp  main.hpp  multi_line_string_position.cpp  parse_key.cpp  parse_key1.cpp  parse_reference2.cpp  schema.cpp  setenv.hpp  success.cpp  test.hpp  tests.cpp  to_stream.cpp  value.cpp
tests/: add_01.failure  add_02.failure  add_03.failure  add_04.failure  add_05.failure  add_06.failure  add_07.failure  add_08.failure  add_09.failure  add_10.failure  add_11.failure  add_12.failure  add_13.failure  add_14.failure  add_15.failure  add_16.failure  add_17.failure  add_18.failure  add_19.failure  add_20.failure  add_21.failure  add_22.failure  add_23.failure  add_24.failure  add_25.failure  add_26.failure  add_27.failure  add_28.failure  add_29.failure  add_30.failure  add_31.failure  add_32.failure  add_33.failure  add_34.failure  add_35.failure  add_36.failure  add_37.failure  add_38.failure  add_39.failure  add_40.failure  (+287 more)
